unpackaged/main/default/objects/Collections_Region__c/fields/Biomed_Region_Oct_2019__c.field-meta.xml
<CustomField>
    <fullName>Biomed_Region_Oct_2019__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to designate that region is a new collection region as of Oct 2019 when checked.</description>
    <label>Biomed Region Oct 2019</label>
    <type>Checkbox</type>
</CustomField>