unpackaged/main/default/objects/Collections_Region__c/fields/Donor_Services_Division_Code__c.field-meta.xml
<CustomField>
    <fullName>Donor_Services_Division_Code__c</fullName>
    <formula>Donor_Services_Division__r.Donor_Services_Division_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Services Division Code</label>
    <type>Text</type>
</CustomField>