unpackaged/main/default/objects/Collections_Region__c/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <description>Unique code assigned to regions as of the Oct 2019 geographic restructure</description>
    <label>Donor Services Region Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>